<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.opengeo</groupId>
    <artifactId>geonode-geoserver-ext</artifactId>
    <packaging>jar</packaging>
    <version>0.3</version>
    <name>GeoNode GeoServer Extensions</name>


    <dependencies>
        <!-- Jetty runner dependencies -->
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty</artifactId>
            <version>${jetty.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty-naming</artifactId>
            <version>${jetty.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty-plus</artifactId>
            <version>${jetty.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <properties>
        <jetty.version>6.1.8</jetty.version>
        <maven.test.search.classdir>true</maven.test.search.classdir>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>maven-jetty-plugin</artifactId>
                <version>6.1.10</version>
                <configuration>
                    <stopPort>8890</stopPort>
                    <stopKey>geonode-stop</stopKey>
                    <scanIntervalSeconds>30</scanIntervalSeconds>
                    <systemProperties>
                        <systemProperty>
                            <name>GEOSERVER_DATA_DIR</name>
                            <value>../../webapps/gs-data/</value>
                        </systemProperty>
                    </systemProperties>


                    <!-- configure the container                 -->
                    <jettyConfig>jetty.xml</jettyConfig>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>

